# geomet-screen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish_to_pypi.yml
docs/source/: api.rst  conf.py  index.rst  sg_execution_times.rst  usage.rst
examples/: create_sample_data.py  panel_designer_example.py  plot_deck_grid.py
geomet/screen/design/: panel_designer.py
geomet/screen/models/: __init__.py
geomet/screen/render/: deck_renderer.py
geomet_screen/: __init__.py
geomet_screen/database/: loader.py
geomet_screen/models/: screen_deck.py
tests/: test_database.py  test_deck_renderer.py  test_integration.py  test_loader.py  test_package.py  test_visualization.py
