[project]
name = "geomet-screen"
version = "0.1.0"
description = "Tools for screen deck layouts, wear monitoring and partition models"
readme = "README.md"
authors = [
    { name = "copilot-swe-agent[bot]", email = "198982749+Copilot@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "plotly>=5.0.0",
    "kaleido>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-book-theme>=1.0.0",
    "sphinx-gallery>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["geomet_screen"]
